added handler for adding a slot to a plan
