# docs/swagger.yaml
@@ -1,5 +1,29 @@
 basePath: /v1
 definitions:
+  api.AddSlotToPlanRequest:
+    properties:
+      duration_unit:
+        type: string
+      duration_value:
+        type: integer
+      sequence_order:
+        type: integer
+      topic_id:
+        type: string
+    type: object
+  api.AddSlotToPlanResponse:
+    properties:
+      duration_unit:
+        type: string
+      duration_value:
+        type: integer
+      plan_id:
+        type: string
+      sequence_order:
+        type: integer
+      topic_id:
+        type: string
+    type: object
   api.CreateCurriculumPlanRequest:
     properties:
       name:
@@ -116,6 +140,12 @@ paths:
       consumes:
       - application/json
       description: Returns all curriculum plans
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -129,6 +159,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get curriculum plans
       tags:
       - curriculum
@@ -138,6 +170,11 @@ paths:
       description: creates a new curriculum plan, it's the overarching structure for
         the curriculum
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Curriculum Plan Request json
         in: body
         name: request
@@ -159,7 +196,47 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create new curriculum plan
+      tags:
+      - curriculum
+  /curriculum/plans/{id}/slots:
+    post:
+      consumes:
+      - application/json
+      description: Plan is the overaching structure and can have multiple slots for
+        topics, this adds a topic to a plan
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: struct AddSlotToPlanRequest
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.AddSlotToPlanRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/api.AddSlotToPlanResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Add a slot to a plan
       tags:
       - curriculum
   /curriculum/topics:
